--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
+    "gatsby-image": "^2.4.0",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-nprogress": "^2.2.1",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-page-creator": "^2.2.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-source-contentful": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.4.3",
+    "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
