--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-google-fonts-v2": "^1.0.0",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-nprogress": "^2.2.1",
     "gatsby-plugin-offline": "^3.1.2",
